# R3.09

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/api/: events.rst  executor.rst  messages.rst  modules.rst
docs/gitbook/: README.md  SUMMARY.md  installation.md
docs/gitbook/execution/: lancement-du-client.md  lancement-du-serveur.md
docs/gitbook/rapport/: rapport-final.md
src/r309/interface_graphique/: exo_1.py  exo_2.py
src/r309/sockets/: exo_1.py  exo_2.py  exo_2_async.py  exo_3.py
src/r309/threads/: exo_1.py  exo_2.py  exo_3.py
src/sae302/client/: __main__.py  socket_client.py
src/sae302/client/views/: connection.py  enter_chat.py  stopwatch.py  upload.py
src/sae302/client/views/windows/: logs.py
src/sae302/commons/: events.py  messages.py
src/sae302/examples/: test.c  test.cpp  test.java  test.py
src/sae302/server/: __main__.py  executor.py
