[project]
name = "r309"
version = "0.0.0"
description = "Ressource R3.09 & SAE3.02"
dependencies = ["requests>=2.32.3", "pyqt6>=6.7.1"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Pas de license"}

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "insegel>=1.3.1",
    "furo>=2024.8.6",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/sae302"]
excludes = ["src/sae302/examples"]

[project.scripts]
sae302_client = "sae302.client.__main__:launch"
sae302_server = "sae302.server.__main__:launch"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.1",
]
